@@ -47,22 +47,6 @@ EOD;
 }
 
 /**
- * Determine LilyPond version
- * @param string $lilypond The path of lilypond program
- * @return string|boolean The version number string if it can be determined, otherwise FALSE
- */
-public static function lilypond_version ($lilypond)
-{
-	if ( !function_exists ('exec') ) return FALSE;
-
-	exec ("\"$lilypond\" -v 2>&1", $output, $retval);
-
-	if ( empty ($output) ) return FALSE;
-	if ( !preg_match('/^gnu lilypond (\d+\.\d+\.\d+)/i', $output[0], $matches) ) return FALSE;
-	return $matches[1];
-}
-
-/**
  * Refer to {@link SrNotationBase::conversion_step1() parent method}
  * for more detail.
  */
@@ -72,11 +56,10 @@ protected function conversion_step1 ($input_file, $intermediate_image)
 	/* LilyPond SUCKS unquestionably. On 2.8 safe mode is triggered by "--safe" option,
 	 * on 2.10.x it becomes "--safe-mode", and on 2.12.x that"s "-dsafe"!
 	 */
-	if ( false !== ( $lilypond_ver = self::lilypond_version ($this->mainprog) ) )
-		if ( version_compare ($lilypond_ver, '2.11.11', '<') )
-			$safemode = '-s';
-		else
-			$safemode = '-dsafe';
+	if ( version_compare ($this->lilypond_ver, '2.11.11', '<') )
+		$safemode = '-s';
+	else
+		$safemode = '-dsafe';
 
 	/* lilypond adds .ps extension by itself, sucks for temp file generation */
 	$cmd = sprintf ('"%s" %s --ps --output "%s" "%s"',
@@ -120,7 +103,7 @@ public static function is_notation_usable ($errmsgs, $opt)
 			break;
 		}
 		$result = parent::is_prog_usable ( $program['test_output'], $opt[$setting_name],
-				$program['test_arg'], $program['min_version'] );
+				$program['test_arg'], $program['min_version'], 1, $this->lilypond_ver );
 		if ( is_wp_error ($result) || !$result )
 		{
 			$ok = false;
